[gd_scene load_steps=3 format=3 uid="uid://brbyo5yka0op0"]

[ext_resource type="Script" uid="uid://cg72y486lq4kr" path="res://store.gd" id="1"]

[sub_resource type="TileSet" id="TileSet_s3f3m"]

[node name="Store" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -300.0
offset_right = 170.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="RingsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Rings: 0"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BuyEgg" type="Button" parent="VBoxContainer/ScrollContainer/ItemList"]
layout_mode = 2
text = "Buy Egg (50 Rings)"

[node name="BuyNut" type="Button" parent="VBoxContainer/ScrollContainer/ItemList"]
layout_mode = 2
text = "Buy Nut (20 Rings)"

[node name="BuyBall" type="Button" parent="VBoxContainer/ScrollContainer/ItemList"]
layout_mode = 2
text = "Buy Ball (30 Rings)"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Garden"

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -2
tile_set = SubResource("TileSet_s3f3m")

[connection signal="pressed" from="VBoxContainer/ScrollContainer/ItemList/BuyEgg" to="." method="_on_buy_egg_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/ItemList/BuyNut" to="." method="_on_buy_nut_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/ItemList/BuyBall" to="." method="_on_buy_ball_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
